--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -345,7 +345,7 @@
                         {
                             <div class="course-card3">
 
-                                <strong>@review.Student</strong>
+                                <strong>@review.Student.StudentNavigation.UserName</strong>
                                 <span class="text-muted small">@review.GetFormattedDate(review.RatingDate)</span>
                                 <ul style="color:red;">
 
