--- a/WebApplication2/Views/Instructor/MyCourses.cshtml
+++ b/WebApplication2/Views/Instructor/MyCourses.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PaginatedListNew<Course>
 
 @{
-    Layout = "_InstructorLayout"; // Adjust the layout page as needed
+    Layout = "_Layout"; // Adjust the layout page as needed
 }
 
 <head>
