--- a/WebApplication2/Views/Student/Profile.cshtml
+++ b/WebApplication2/Views/Student/Profile.cshtml
@@ -3,7 +3,7 @@
 
 
 @{
-    Layout = "_StudentLayout";
+    Layout = "_Layout";
 }
 
 
@@ -147,7 +147,7 @@
                 </div>
             </div>
             <div class="col-md-12">
-                <partial name="_ReviewPartial" model="Model.Reviews"></partial>
+                <partial name="_ReviewForStudentProfilePartial" model="Model.Reviews"></partial>
             </div>
         </div>
     </div>
