--- a/WebApplication2/Views/Student/Review.cshtml
+++ b/WebApplication2/Views/Student/Review.cshtml
@@ -180,7 +180,7 @@
 
     </head>
 @{
-    Layout = "_StudentLayout";
+    Layout = "_Layout";
 }
     <!-- Page Content -->
     <div class="banner header-text">
