--- a/WebApplication2/Views/Home/New.cshtml
+++ b/WebApplication2/Views/Home/New.cshtml
@@ -1,4 +1,62 @@
-﻿@model InstructorRegisterViewModel
+﻿@{
+    Layout = "_Layout";
+
+
+}
+<style>
+
+    .error-container {
+        text-align: center;
+    }
+    .error-code {
+        font-size: 10rem;
+        font-weight: 900;
+        color: #ff5454;
+        position: relative;
+        display: inline-block;
+    }
+    .error-code::after {
+        content: "404";
+        position: absolute;
+        top: 2px;
+        left: 2px;
+        color: #fff;
+        z-index: -1;
+    }
+    .btn-home {
+        background-color: #ff5454;
+        border-color: #ff5454;
+        color: white;
+    }
+    .btn-home:hover {
+        background-color: #ff2525;
+        border-color: #ff2525;
+    }
+
+    .banner-item-1 {
+        padding: 50px;
+    }
+  </style>
+
+<div class="header-text">
+    <div class="owl-banner owl-carousel">
+        <div class="banner-item-1">
+        </div>
+    </div>
+</div>
+<div class="error-container">
+    <div class="row">
+        <div class="error-container">
+            <div class="error-code">404</div>
+            <h1>PAGE NOT FOUND!</h1>
+            <p>YOU SEEM TO BE TRYING TO FIND HIS WAY HOME</p>
+            <a href="index.html" class="btn btn-home">Back to home</a>
+        </div>
+</div>
+</div>
+
+
+@* @model InstructorRegisterViewModel
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
 
@@ -21,11 +79,7 @@
         <input asp-for="PhoneNumber" type="tel" id="phone" name="PhoneNumber" />
         <span id="validation-message"></span>
     </div>
-@*     <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" id="link">
-        <path d="M82.4 44.6 70.3 56.7c-.8.8-2 .8-2.8 0-.8-.8-.8-2 0-2.8l12.1-12.1c5.9-5.9 5.9-15.5 0-21.4C76.7 17.5 73 16 68.9 16c-4 0-7.8 1.6-10.7 4.4L46.1 32.5c-5.9 5.9-5.9 15.5 0 21.4 1.4 1.4 3.1 2.6 5 3.3 1 .4 1.5 1.6 1.1 2.6-.9 2.1-3.2.9-2.6 1.1-2.4-1-4.5-2.4-6.3-4.2-7.5-7.4-7.5-19.6 0-27l12.1-12.1C59 14 63.8 12 68.9 12s9.9 2 13.5 5.6c7.5 7.4 7.5 19.6 0 27zm-32-5.5c-1-.4-2.2.1-2.6 1.1-.4 1 .1 2.2 1.1 2.6 1.9.8 3.6 1.9 5 3.3 5.9 5.9 5.9 15.5 0 21.4L41.8 79.6c-2.9 2.9-6.6 4.4-10.7 4.4-4 0-7.8-1.6-10.7-4.4-5.9-5.9-5.9-15.5 0-21.4l12.1-12.1c.8-.8.8-2 0-2.8-.8-.8-2-.8-2.8 0L17.6 55.4c-7.4 7.4-7.4 19.6 0 27C21.2 86 26 88 31.1 88s9.9-2 13.5-5.6l12.1-12.1c7.5-7.4 7.5-19.6 0-27-1.8-1.8-3.9-3.2-6.3-4.2z"></path
-        ><path fill="#00F" d="M1504-510v1684H-280V-510h1784m8-8H-288v1700h1800V-518z"></path>
-    </svg>
- *@
+
 
     <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
     <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -75,4 +129,4 @@
         });
     </script>
 
-}
+} *@
