--- a/WebApplication2/Views/Instructor/ViewProfile.cshtml
+++ b/WebApplication2/Views/Instructor/ViewProfile.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model InstructorDetailsViewModel
+﻿@model InstructorDetailsViewModel
 
 
 @{
@@ -25,7 +24,7 @@
 
 <div class="container">
     <div class="row">
-        <form asp-action="profile">
+        <form asp-action="viewprofile" method="post">
             <input hidden asp-for="@Model.InstructorId" />
         </form>
         <div class="col-md-3 text-center">
@@ -60,12 +59,15 @@
                 <span class="text-black"><i class="fa fa-male icon"></i></span> @Model.Gender
 
             </p>
-            <a class="btn btn-light" asp-controller="instructor" asp-action="edit"  style="margin:100px;"> Edit Profile</a>
+
 
         </div>
 
 
     </div>
+
+        <partial name="_InstructorCoursesPartial" model="@Model.Course"></partial>
+
 </div>
 
 
