--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -83,9 +83,30 @@
     <header class="">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-controller="home" asp-action="index">
-                    <h2><em>L</em>earn Consult</h2>
-                </a>
+                @if (User.IsInRole("Student") && User.Identity.IsAuthenticated == true)
+                {
+                    <a class="navbar-brand" asp-controller="student" asp-action="index">
+                        <h2><em>L</em>earn Consult</h2>
+                    </a>
+                }
+                else if (User.IsInRole("Instructor") && User.Identity.IsAuthenticated == true)
+                {
+                    <a class="navbar-brand" asp-controller="instructor" asp-action="index">
+                        <h2><em>L</em>earn Consult</h2>
+                    </a>
+                }
+                else if (User.IsInRole("Admin") && User.Identity.IsAuthenticated == true)
+                {
+                    <a class="navbar-brand" asp-controller="homee" asp-action="index" asp-area="admin">
+                        <h2><em>L</em>earn Consult</h2>
+                    </a>
+                }
+                else
+                {
+                    <a class="navbar-brand" asp-controller="home" asp-action="index">
+                        <h2><em>L</em>earn Consult</h2>
+                    </a>
+                }
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -140,20 +161,75 @@
                             </ul>
                         </li>
 
+                        @if (User.Identity.IsAuthenticated == true && User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Account" asp-action="Step1">
+                                    For Instructors
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-controller="Account" asp-action="login" class="nav-link">Login</a>
+                            </li>
+                        }
 
-                       
+                        else if(User.Identity.IsAuthenticated ==true && User.IsInRole("Instructor"))
+                        {
+                            <li class="nav-item ">
+                                <a class="nav-link" asp-controller="Instructor" asp-action="MyCourses">
+                                    My Courses
+                                </a>
+                            </li>
 
+                            <li class="nav-item ">
+                                <a class="nav-link" asp-controller="course" asp-action="AddCourse">
+                                    Add Course
+                                </a>
+                            </li>
 
+                            <li class="nav-item">
+                                <a asp-controller="account" asp-action="Logout" class="nav-link">Signout</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Instructor" asp-action="Profile">Profile</a>
+                            </li>
+                        }
 
-                        <li class="nav-item">
-                <a class="nav-link" asp-controller="Account" asp-action="Step1">
-                    
-                                For Instructors
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a asp-controller="StudentAccount" asp-action="Step1" class="nav-link">Sign up</a>
-                        </li>
+                        else if (User.Identity.IsAuthenticated == true && User.IsInRole("Student"))
+                        {
+                            <li class="nav-item">
+                                <a asp-controller="account" asp-action="Logout" class="nav-link">Signout</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="student" asp-action="Profile">Profile</a>
+                            </li>
+                        }
+             @*            else if (User.Identity.IsAuthenticated == true && User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item ">
+                                <a class="nav-link" asp-action="adminregister" asp-controller="account" asp-area="">
+                                    Add Admin
+                                </a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-link" asp-action="addrole" asp-controller="Role" asp-area="Admin">
+                                    Add Role
+                                </a>
+                            </li>
+                        } *@
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Account" asp-action="Step1">
+                                    For Instructors
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-controller="Account" asp-action="login" class="nav-link">Login</a>
+                            </li>
+                        }
+
+                      
 
                     </ul>
                 </div>
