--- a/WebApplication2/Views/Course/filter2.cshtml
+++ b/WebApplication2/Views/Course/filter2.cshtml
@@ -138,7 +138,7 @@
             <button class="btn btn-dark mb-3 w-100 d-lg-none" id="filter-toggle">Filter</button>
             <div class="sidebar d-none d-lg-block">
                 <div class="filter-section">
-                    <h3>Filters</h3>
+                    <h2 class="grid-title"><i class="fa fa-filter"></i> Filter by</h2>
                 </div>
                 <div class="filter-section">
                     <h4>
