--- a/WebApplication2/Views/Category/Details.cshtml
+++ b/WebApplication2/Views/Category/Details.cshtml
@@ -119,7 +119,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="container">
-                <h2 class="grid-title"> @ViewBag.categoryName</h2>
+                <h3 class="grid-title"><i class="fa fa-filter"></i>Filter @ViewBag.categoryName by </h3>
                         <hr>
                 @* <div class="btn-group-vertical" role="group" aria-label="Vertical radio toggle button group"> *@
 
@@ -167,7 +167,7 @@
                                id="clear-filters">Clear filters</a>
                         </div>
                     </div> *@
-                    <h2 id="results-count">5,296 results</h2>
+            <h2 id="results-count">@ViewBag.CategoryRecordCount results</h2>
                     <div id="course-list">
 
 
@@ -177,12 +177,12 @@
                     <div class="result-item">
                         @if (items.Picture is null)
                         {
-                            <a href="#"><img src="~/images/courses/noimage.png" alt=""></a>
+                            <img src="~/images/courses/noimage.png" alt="">
 
                         }
-                        <a href="#"><img src="~/images/courses/@items.Picture" alt=""></a>
+                        <img src="~/images/courses/@items.Picture" alt="">
                         <div class="content">
-                                    <h3>@items.Title</h3>
+                            <a asp-action="details" asp-controller="course" asp-route-id="@items.CourseId"><h3>@items.Title</h3></a>
                                     <p class="meta">
                                         @*  ASP.NET Core 6, 7 & 8 | ASP.NET Core Projects |
                                     Bootcamp | Advanced | Interview Questions | Web API |
@@ -212,7 +212,7 @@
 
 
                                             }
-                                        (3, 666)
+                                        (@items.Reviews.Count())
                                     </p>
                                     </p>
                                     <p class="meta">
