adding the notfound page

--- a/WebApplication2/Views/Home/NotFound.cshtml
+++ b/WebApplication2/Views/Home/NotFound.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿
+@{
     Layout = "_Layout";
 
 
@@ -50,7 +51,7 @@
             <div class="error-code">404</div>
             <h1>PAGE NOT FOUND!</h1>
             <p>YOU SEEM TO BE TRYING TO FIND HIS WAY HOME</p>
-            <a href="index.html" class="btn btn-home">Back to home</a>
+            <a  asp-action="index"  asp-controller="Home" class="btn btn-home">Back to home</a>
         </div>
 </div>
 </div>
