--- a/WebApplication2/Views/Shared/_ReviewForStudentProfilePartial.cshtml
+++ b/WebApplication2/Views/Shared/_ReviewForStudentProfilePartial.cshtml
@@ -15,15 +15,52 @@
         cursor: pointer;
     }
 </style>
+<h2>My Reviews (@Model.Count)</h2>
+<div class="container">
 
+   
 
-<div class="col-md-9 my-3">
+        <div class="col-md-9 my-3">
     <div class="padding">
         <div class="row">
             <div class="latest-products">
                 <div class="reviews-container">
                     @foreach (var items in Model)
                     {
+                                @* delete modal *@
+                                <div id="gfg" class="modal" tabindex="-1" style="margin-top:80px;">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title">
+                                                    Delete confirmation
+                                                </h5>
+                                                <button type="button"
+                                                        class="btn-close"
+                                                        data-bs-dismiss="modal"
+                                                        aria-label="Close">
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <p>
+                                                    Are you sure you want to delete this review?
+                                                </p>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <a role="button"
+                                                   class="filled-button"
+                                                   data-bs-dismiss="modal">
+                                                    Close
+                                                </a>
+                                                <a role="button"
+                                                   class="filled-button"
+                                                   asp-action="delete" asp-controller="review" asp-route-id="@items.ReviewId">
+                                                    Delete
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                         <div class="course-reviews">
                             <div class="review-card">
                                 <div class="card-body">
@@ -128,6 +165,7 @@
             </ul>
         </nav>
     </div>
+</div>
 </div>
 
 
