editing the socials links in the edit view in instructor controller

--- a/WebApplication2/Views/Instructor/Index.cshtml
+++ b/WebApplication2/Views/Instructor/Index.cshtml
@@ -9,7 +9,12 @@
     var reviews = _context.Reviews.OrderByDescending(c => c.Rate)
             .Take(10).ToList();
 } *@
-<partial name="_NotificationPartial"></partial>
+@if (TempData.ContainsKey("Success"))
+{
+        <partial name="_NotificationPartial"></partial>
+    TempData.Remove("Success");
+}
+   
 @{
     Layout = "_Layout";
 }
